[package]
name = "proc-gen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
nethercore-zx = { path = "../../nethercore-zx", default-features = false }
glam = { workspace = true }
proc-gen-showcase-defs = { path = "../../examples/_lib/proc-gen-showcase-defs" }

# Texture dependencies
noise = "0.9"
png = { workspace = true }

# Audio dependencies (optional)
hound = { workspace = true, optional = true }

[features]
default = []
wav-export = ["hound"]
